// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Storyshots Checkbox Checkbox 1`] = `
.c0 {
  color: #011e38;
  font-family: 'IBM Plex Sans',sans-serif;
  font-size: 16px;
  line-height: 1.5;
  -webkit-font-smoothing: antialiased;
  -moz-osx-font-smoothing: grayscale;
}

.c0 button {
  font-family: 'IBM Plex Sans',sans-serif;
}

.c0 * {
  box-sizing: border-box;
}

.c0 img {
  max-width: 100%;
  height: auto;
}

.c7 {
  margin-top: 0;
  margin-bottom: 0;
  font-size: 16px;
  line-height: 1.5;
  color: currentColor;
}

.c2 {
  cursor: pointer;
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  width: auto;
  min-height: 24px;
  vertical-align: top;
  -webkit-align-items: flex-start;
  -webkit-box-align: flex-start;
  -ms-flex-align: flex-start;
  align-items: flex-start;
  -webkit-user-select: none;
  -moz-user-select: none;
  -ms-user-select: none;
  user-select: none;
  padding: 4px 0;
}

.c5 {
  min-width: 16px;
  height: 16px;
  border-radius: 2px;
  border: solid 1px;
  position: relative;
  -webkit-align-self: center;
  -ms-flex-item-align: center;
  align-self: center;
}

.c5:before {
  content: '';
  display: none;
  position: relative;
  left: 4px;
  width: 3px;
  height: 9px;
  border: solid #ffffff;
  border-radius: 1px;
  border-width: 0 3px 3px 0;
  -webkit-transform: rotate(45deg);
  -ms-transform: rotate(45deg);
  transform: rotate(45deg);
}

.c3 {
  position: absolute;
  opacity: 0;
  height: 1px;
  width: 1px;
}

.c3:focus + .c4 {
  box-shadow: 0px 0px 5px 0px rgba(33,107,235,.9);
}

.c3:checked + .c4 {
  border-color: #00438f;
  background-color: #00438f;
}

.c3:checked + .c4:before {
  display: block;
}

.c3:not(:checked) + .c4 {
  border-color: #c0c8d1;
  background-color: #ffffff;
}

.c1 {
  padding: 4px 0;
}

.c1 .c6 {
  margin-left: 8px;
}

<div
  style={
    Object {
      "padding": "24px",
    }
  }
>
  <div
    className="c0"
  >
    <div
      className="c1"
    >
      <label
        className="c2"
        disabled={false}
      >
        <input
          aria-invalid={false}
          aria-required={false}
          className="c3 c1"
          disabled={false}
          id="checkbox"
          required={false}
          type="checkbox"
        />
        <div
          className="c4 c5"
          data-testid="visual-checkbox"
          disabled={false}
        />
        <p
          className="c6 c7"
          color="currentColor"
          disabled={false}
          fontSize="medium"
        >
          I am a checkbox
        </p>
      </label>
    </div>
  </div>
</div>
`;

exports[`Storyshots Checkbox Checkbox with no label 1`] = `
.c0 {
  color: #011e38;
  font-family: 'IBM Plex Sans',sans-serif;
  font-size: 16px;
  line-height: 1.5;
  -webkit-font-smoothing: antialiased;
  -moz-osx-font-smoothing: grayscale;
}

.c0 button {
  font-family: 'IBM Plex Sans',sans-serif;
}

.c0 * {
  box-sizing: border-box;
}

.c0 img {
  max-width: 100%;
  height: auto;
}

.c2 {
  cursor: pointer;
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  width: auto;
  min-height: 24px;
  vertical-align: top;
  -webkit-align-items: flex-start;
  -webkit-box-align: flex-start;
  -ms-flex-align: flex-start;
  align-items: flex-start;
  -webkit-user-select: none;
  -moz-user-select: none;
  -ms-user-select: none;
  user-select: none;
  padding: 4px 0;
}

.c5 {
  min-width: 16px;
  height: 16px;
  border-radius: 2px;
  border: solid 1px;
  position: relative;
  -webkit-align-self: center;
  -ms-flex-item-align: center;
  align-self: center;
}

.c5:before {
  content: '';
  display: none;
  position: relative;
  left: 4px;
  width: 3px;
  height: 9px;
  border: solid #ffffff;
  border-radius: 1px;
  border-width: 0 3px 3px 0;
  -webkit-transform: rotate(45deg);
  -ms-transform: rotate(45deg);
  transform: rotate(45deg);
}

.c3 {
  position: absolute;
  opacity: 0;
  height: 1px;
  width: 1px;
}

.c3:focus + .c4 {
  box-shadow: 0px 0px 5px 0px rgba(33,107,235,.9);
}

.c3:checked + .c4 {
  border-color: #00438f;
  background-color: #00438f;
}

.c3:checked + .c4:before {
  display: block;
}

.c3:not(:checked) + .c4 {
  border-color: #c0c8d1;
  background-color: #ffffff;
}

.c1 {
  padding: 4px 0;
}

.c1 .Text-sc-1wu7vpu-0 {
  margin-left: 8px;
}

<div
  style={
    Object {
      "padding": "24px",
    }
  }
>
  <div
    className="c0"
  >
    <div
      className="c1"
    >
      <label
        className="c2"
        disabled={false}
      >
        <input
          aria-invalid={false}
          aria-required={false}
          className="c3 c1"
          disabled={false}
          id={null}
          required={false}
          type="checkbox"
        />
        <div
          className="c4 c5"
          data-testid="visual-checkbox"
          disabled={false}
        />
      </label>
    </div>
  </div>
</div>
`;

exports[`Storyshots Checkbox Set to defaultChecked 1`] = `
.c0 {
  color: #011e38;
  font-family: 'IBM Plex Sans',sans-serif;
  font-size: 16px;
  line-height: 1.5;
  -webkit-font-smoothing: antialiased;
  -moz-osx-font-smoothing: grayscale;
}

.c0 button {
  font-family: 'IBM Plex Sans',sans-serif;
}

.c0 * {
  box-sizing: border-box;
}

.c0 img {
  max-width: 100%;
  height: auto;
}

.c7 {
  margin-top: 0;
  margin-bottom: 0;
  font-size: 16px;
  line-height: 1.5;
  color: currentColor;
}

.c2 {
  cursor: pointer;
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  width: auto;
  min-height: 24px;
  vertical-align: top;
  -webkit-align-items: flex-start;
  -webkit-box-align: flex-start;
  -ms-flex-align: flex-start;
  align-items: flex-start;
  -webkit-user-select: none;
  -moz-user-select: none;
  -ms-user-select: none;
  user-select: none;
  padding: 4px 0;
}

.c5 {
  min-width: 16px;
  height: 16px;
  border-radius: 2px;
  border: solid 1px;
  position: relative;
  -webkit-align-self: center;
  -ms-flex-item-align: center;
  align-self: center;
}

.c5:before {
  content: '';
  display: none;
  position: relative;
  left: 4px;
  width: 3px;
  height: 9px;
  border: solid #ffffff;
  border-radius: 1px;
  border-width: 0 3px 3px 0;
  -webkit-transform: rotate(45deg);
  -ms-transform: rotate(45deg);
  transform: rotate(45deg);
}

.c3 {
  position: absolute;
  opacity: 0;
  height: 1px;
  width: 1px;
}

.c3:focus + .c4 {
  box-shadow: 0px 0px 5px 0px rgba(33,107,235,.9);
}

.c3:checked + .c4 {
  border-color: #00438f;
  background-color: #00438f;
}

.c3:checked + .c4:before {
  display: block;
}

.c3:not(:checked) + .c4 {
  border-color: #c0c8d1;
  background-color: #ffffff;
}

.c1 {
  padding: 4px 0;
}

.c1 .c6 {
  margin-left: 8px;
}

<div
  style={
    Object {
      "padding": "24px",
    }
  }
>
  <div
    className="c0"
  >
    <div
      className="c1"
    >
      <label
        className="c2"
        disabled={false}
      >
        <input
          aria-invalid={false}
          aria-required={false}
          className="c3 c1"
          defaultChecked={true}
          disabled={false}
          id="checkbox"
          required={false}
          type="checkbox"
        />
        <div
          className="c4 c5"
          data-testid="visual-checkbox"
          disabled={false}
        />
        <p
          className="c6 c7"
          color="currentColor"
          disabled={false}
          fontSize="medium"
        >
          I am checked by default
        </p>
      </label>
    </div>
  </div>
</div>
`;

exports[`Storyshots Checkbox Set to disabled 1`] = `
.c0 {
  color: #011e38;
  font-family: 'IBM Plex Sans',sans-serif;
  font-size: 16px;
  line-height: 1.5;
  -webkit-font-smoothing: antialiased;
  -moz-osx-font-smoothing: grayscale;
}

.c0 button {
  font-family: 'IBM Plex Sans',sans-serif;
}

.c0 * {
  box-sizing: border-box;
}

.c0 img {
  max-width: 100%;
  height: auto;
}

.c7 {
  margin-top: 0;
  margin-bottom: 0;
  font-size: 16px;
  line-height: 1.5;
  color: currentColor;
  opacity: 0.3333;
}

.c2 {
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  width: auto;
  min-height: 24px;
  vertical-align: top;
  -webkit-align-items: flex-start;
  -webkit-box-align: flex-start;
  -ms-flex-align: flex-start;
  align-items: flex-start;
  -webkit-user-select: none;
  -moz-user-select: none;
  -ms-user-select: none;
  user-select: none;
  padding: 4px 0;
}

.c5 {
  min-width: 16px;
  height: 16px;
  border-radius: 2px;
  border: solid 1px;
  position: relative;
  -webkit-align-self: center;
  -ms-flex-item-align: center;
  align-self: center;
}

.c5:before {
  content: '';
  display: none;
  position: relative;
  left: 4px;
  width: 3px;
  height: 9px;
  border: solid #ffffff;
  border-radius: 1px;
  border-width: 0 3px 3px 0;
  -webkit-transform: rotate(45deg);
  -ms-transform: rotate(45deg);
  transform: rotate(45deg);
}

.c3 {
  position: absolute;
  opacity: 0;
  height: 1px;
  width: 1px;
}

.c3:focus + .c4 {
  box-shadow: 0px 0px 5px 0px rgba(33,107,235,.9);
}

.c3:checked + .c4 {
  border-color: #e4e7eb;
  background-color: #e4e7eb;
}

.c3:checked + .c4:before {
  display: block;
}

.c3:not(:checked) + .c4 {
  border-color: #e4e7eb;
  background-color: #f0f2f5;
}

.c1 {
  padding: 4px 0;
}

.c1 .c6 {
  margin-left: 8px;
}

<div
  style={
    Object {
      "padding": "24px",
    }
  }
>
  <div
    className="c0"
  >
    <div
      className="c1"
    >
      <label
        className="c2"
        disabled={true}
      >
        <input
          aria-invalid={false}
          aria-required={false}
          className="c3 c1"
          disabled={true}
          id="checkbox-1"
          required={false}
          type="checkbox"
        />
        <div
          className="c4 c5"
          data-testid="visual-checkbox"
          disabled={true}
        />
        <p
          className="c6 c7"
          color="currentColor"
          disabled={true}
          fontSize="medium"
        >
          I am disabled
        </p>
      </label>
    </div>
    <div
      className="c1"
    >
      <label
        className="c2"
        disabled={true}
      >
        <input
          aria-invalid={false}
          aria-required={false}
          checked={true}
          className="c3 c1"
          disabled={true}
          id="checkbox-2"
          required={false}
          type="checkbox"
        />
        <div
          checked={true}
          className="c4 c5"
          data-testid="visual-checkbox"
          disabled={true}
        />
        <p
          className="c6 c7"
          color="currentColor"
          disabled={true}
          fontSize="medium"
        >
          I am disabled
        </p>
      </label>
    </div>
  </div>
</div>
`;

exports[`Storyshots Checkbox Set to error 1`] = `
.c0 {
  color: #011e38;
  font-family: 'IBM Plex Sans',sans-serif;
  font-size: 16px;
  line-height: 1.5;
  -webkit-font-smoothing: antialiased;
  -moz-osx-font-smoothing: grayscale;
}

.c0 button {
  font-family: 'IBM Plex Sans',sans-serif;
}

.c0 * {
  box-sizing: border-box;
}

.c0 img {
  max-width: 100%;
  height: auto;
}

.c7 {
  margin-top: 0;
  margin-bottom: 0;
  font-size: 16px;
  line-height: 1.5;
  color: currentColor;
}

.c2 {
  cursor: pointer;
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  width: auto;
  min-height: 24px;
  vertical-align: top;
  -webkit-align-items: flex-start;
  -webkit-box-align: flex-start;
  -ms-flex-align: flex-start;
  align-items: flex-start;
  -webkit-user-select: none;
  -moz-user-select: none;
  -ms-user-select: none;
  user-select: none;
  padding: 4px 0;
}

.c5 {
  min-width: 16px;
  height: 16px;
  border-radius: 2px;
  border: solid 1px;
  position: relative;
  -webkit-align-self: center;
  -ms-flex-item-align: center;
  align-self: center;
}

.c5:before {
  content: '';
  display: none;
  position: relative;
  left: 4px;
  width: 3px;
  height: 9px;
  border: solid #ffffff;
  border-radius: 1px;
  border-width: 0 3px 3px 0;
  -webkit-transform: rotate(45deg);
  -ms-transform: rotate(45deg);
  transform: rotate(45deg);
}

.c3 {
  position: absolute;
  opacity: 0;
  height: 1px;
  width: 1px;
}

.c3:focus + .c4 {
  box-shadow: 0px 0px 5px 0px rgba(33,107,235,.9);
}

.c3:checked + .c4 {
  border-color: #cc1439;
  background-color: #cc1439;
}

.c3:checked + .c4:before {
  display: block;
}

.c3:not(:checked) + .c4 {
  border-color: #cc1439;
  background-color: #ffffff;
}

.c1 {
  padding: 4px 0;
}

.c1 .c6 {
  margin-left: 8px;
}

<div
  style={
    Object {
      "padding": "24px",
    }
  }
>
  <div
    className="c0"
  >
    <div
      className="c1"
    >
      <label
        className="c2"
        disabled={false}
      >
        <input
          aria-invalid={true}
          aria-required={false}
          className="c3 c1"
          disabled={false}
          id="checkbox"
          required={false}
          type="checkbox"
        />
        <div
          className="c4 c5"
          data-testid="visual-checkbox"
          disabled={false}
        />
        <p
          className="c6 c7"
          color="currentColor"
          disabled={false}
          fontSize="medium"
        >
          I am error
        </p>
      </label>
    </div>
    <div
      className="c1"
    >
      <label
        className="c2"
        disabled={false}
      >
        <input
          aria-invalid={true}
          aria-required={false}
          className="c3 c1"
          defaultChecked={true}
          disabled={false}
          id="checkbox"
          required={false}
          type="checkbox"
        />
        <div
          className="c4 c5"
          data-testid="visual-checkbox"
          disabled={false}
        />
        <p
          className="c6 c7"
          color="currentColor"
          disabled={false}
          fontSize="medium"
        >
          I am error
        </p>
      </label>
    </div>
  </div>
</div>
`;

exports[`Storyshots Checkbox Set to required 1`] = `
.c0 {
  color: #011e38;
  font-family: 'IBM Plex Sans',sans-serif;
  font-size: 16px;
  line-height: 1.5;
  -webkit-font-smoothing: antialiased;
  -moz-osx-font-smoothing: grayscale;
}

.c0 button {
  font-family: 'IBM Plex Sans',sans-serif;
}

.c0 * {
  box-sizing: border-box;
}

.c0 img {
  max-width: 100%;
  height: auto;
}

.c7 {
  margin-top: 0;
  margin-bottom: 0;
  font-size: 16px;
  line-height: 1.5;
  color: currentColor;
}

.c2 {
  cursor: pointer;
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  width: auto;
  min-height: 24px;
  vertical-align: top;
  -webkit-align-items: flex-start;
  -webkit-box-align: flex-start;
  -ms-flex-align: flex-start;
  align-items: flex-start;
  -webkit-user-select: none;
  -moz-user-select: none;
  -ms-user-select: none;
  user-select: none;
  padding: 4px 0;
}

.c5 {
  min-width: 16px;
  height: 16px;
  border-radius: 2px;
  border: solid 1px;
  position: relative;
  -webkit-align-self: center;
  -ms-flex-item-align: center;
  align-self: center;
}

.c5:before {
  content: '';
  display: none;
  position: relative;
  left: 4px;
  width: 3px;
  height: 9px;
  border: solid #ffffff;
  border-radius: 1px;
  border-width: 0 3px 3px 0;
  -webkit-transform: rotate(45deg);
  -ms-transform: rotate(45deg);
  transform: rotate(45deg);
}

.c3 {
  position: absolute;
  opacity: 0;
  height: 1px;
  width: 1px;
}

.c3:focus + .c4 {
  box-shadow: 0px 0px 5px 0px rgba(33,107,235,.9);
}

.c3:checked + .c4 {
  border-color: #00438f;
  background-color: #00438f;
}

.c3:checked + .c4:before {
  display: block;
}

.c3:not(:checked) + .c4 {
  border-color: #c0c8d1;
  background-color: #ffffff;
}

.c1 {
  padding: 4px 0;
}

.c1 .c6 {
  margin-left: 8px;
}

<div
  style={
    Object {
      "padding": "24px",
    }
  }
>
  <div
    className="c0"
  >
    <div
      className="c1"
    >
      <label
        className="c2"
        disabled={false}
      >
        <input
          aria-invalid={false}
          aria-required={true}
          className="c3 c1"
          disabled={false}
          id="checkbox"
          required={true}
          type="checkbox"
        />
        <div
          className="c4 c5"
          data-testid="visual-checkbox"
          disabled={false}
        />
        <p
          className="c6 c7"
          color="currentColor"
          disabled={false}
          fontSize="medium"
        >
          I am a checkbox
        </p>
      </label>
    </div>
  </div>
</div>
`;

exports[`Storyshots Checkbox With state 1`] = `
.c0 {
  color: #011e38;
  font-family: 'IBM Plex Sans',sans-serif;
  font-size: 16px;
  line-height: 1.5;
  -webkit-font-smoothing: antialiased;
  -moz-osx-font-smoothing: grayscale;
}

.c0 button {
  font-family: 'IBM Plex Sans',sans-serif;
}

.c0 * {
  box-sizing: border-box;
}

.c0 img {
  max-width: 100%;
  height: auto;
}

.c7 {
  margin-top: 0;
  margin-bottom: 0;
  font-size: 16px;
  line-height: 1.5;
  color: currentColor;
}

.c2 {
  cursor: pointer;
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  width: auto;
  min-height: 24px;
  vertical-align: top;
  -webkit-align-items: flex-start;
  -webkit-box-align: flex-start;
  -ms-flex-align: flex-start;
  align-items: flex-start;
  -webkit-user-select: none;
  -moz-user-select: none;
  -ms-user-select: none;
  user-select: none;
  padding: 4px 0;
}

.c5 {
  min-width: 16px;
  height: 16px;
  border-radius: 2px;
  border: solid 1px;
  position: relative;
  -webkit-align-self: center;
  -ms-flex-item-align: center;
  align-self: center;
}

.c5:before {
  content: '';
  display: none;
  position: relative;
  left: 4px;
  width: 3px;
  height: 9px;
  border: solid #ffffff;
  border-radius: 1px;
  border-width: 0 3px 3px 0;
  -webkit-transform: rotate(45deg);
  -ms-transform: rotate(45deg);
  transform: rotate(45deg);
}

.c3 {
  position: absolute;
  opacity: 0;
  height: 1px;
  width: 1px;
}

.c3:focus + .c4 {
  box-shadow: 0px 0px 5px 0px rgba(33,107,235,.9);
}

.c3:checked + .c4 {
  border-color: #00438f;
  background-color: #00438f;
}

.c3:checked + .c4:before {
  display: block;
}

.c3:not(:checked) + .c4 {
  border-color: #c0c8d1;
  background-color: #ffffff;
}

.c1 {
  padding: 4px 0;
}

.c1 .c6 {
  margin-left: 8px;
}

<div
  style={
    Object {
      "padding": "24px",
    }
  }
>
  <div
    className="c0"
  >
    <div
      className="c1"
    >
      <label
        className="c2"
        disabled={false}
      >
        <input
          aria-invalid={false}
          aria-required={false}
          checked={false}
          className="c3 c1"
          disabled={false}
          id="checkbox-1"
          onChange={[Function]}
          required={false}
          type="checkbox"
        />
        <div
          checked={false}
          className="c4 c5"
          data-testid="visual-checkbox"
          disabled={false}
        />
        <p
          className="c6 c7"
          color="currentColor"
          disabled={false}
          fontSize="medium"
        >
          I am controlled and checked
        </p>
      </label>
    </div>
    <div
      className="c1"
    >
      <label
        className="c2"
        disabled={false}
      >
        <input
          aria-invalid={false}
          aria-required={false}
          checked={false}
          className="c3 c1"
          disabled={false}
          id="checkbox-2"
          onChange={[Function]}
          required={false}
          type="checkbox"
        />
        <div
          checked={false}
          className="c4 c5"
          data-testid="visual-checkbox"
          disabled={false}
        />
        <p
          className="c6 c7"
          color="currentColor"
          disabled={false}
          fontSize="medium"
        >
          I am controlled and unchecked
        </p>
      </label>
    </div>
  </div>
</div>
`;

exports[`Storyshots Checkbox indeterminate 1`] = `
.c0 {
  color: #011e38;
  font-family: 'IBM Plex Sans',sans-serif;
  font-size: 16px;
  line-height: 1.5;
  -webkit-font-smoothing: antialiased;
  -moz-osx-font-smoothing: grayscale;
}

.c0 button {
  font-family: 'IBM Plex Sans',sans-serif;
}

.c0 * {
  box-sizing: border-box;
}

.c0 img {
  max-width: 100%;
  height: auto;
}

.c7 {
  margin-top: 0;
  margin-bottom: 0;
  font-size: 16px;
  line-height: 1.5;
  color: currentColor;
}

.c11 {
  margin-top: 0;
  margin-bottom: 0;
  font-size: 16px;
  line-height: 1.5;
  color: currentColor;
  opacity: 0.3333;
}

.c2 {
  cursor: pointer;
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  width: auto;
  min-height: 24px;
  vertical-align: top;
  -webkit-align-items: flex-start;
  -webkit-box-align: flex-start;
  -ms-flex-align: flex-start;
  align-items: flex-start;
  -webkit-user-select: none;
  -moz-user-select: none;
  -ms-user-select: none;
  user-select: none;
  padding: 4px 0;
}

.c9 {
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  width: auto;
  min-height: 24px;
  vertical-align: top;
  -webkit-align-items: flex-start;
  -webkit-box-align: flex-start;
  -ms-flex-align: flex-start;
  align-items: flex-start;
  -webkit-user-select: none;
  -moz-user-select: none;
  -ms-user-select: none;
  user-select: none;
  padding: 4px 0;
}

.c5 {
  min-width: 16px;
  height: 16px;
  border-radius: 2px;
  border: solid 1px;
  position: relative;
  -webkit-align-self: center;
  -ms-flex-item-align: center;
  align-self: center;
}

.c5:before {
  content: '';
  display: none;
  position: relative;
  left: 4px;
  width: 3px;
  height: 9px;
  border: solid #ffffff;
  border-width: 0 3px 0 0;
  -webkit-transform: rotate(90deg) translateX(1px);
  -ms-transform: rotate(90deg) translateX(1px);
  transform: rotate(90deg) translateX(1px);
  border-radius: 0;
}

.c3 {
  position: absolute;
  opacity: 0;
  height: 1px;
  width: 1px;
}

.c3:focus + .c4 {
  box-shadow: 0px 0px 5px 0px rgba(33,107,235,.9);
}

.c3:checked + .c4 {
  border-color: #00438f;
  background-color: #00438f;
}

.c3:checked + .c4:before {
  display: block;
}

.c3:not(:checked) + .c4 {
  border-color: #c0c8d1;
  background-color: #ffffff;
}

.c8 {
  position: absolute;
  opacity: 0;
  height: 1px;
  width: 1px;
}

.c8:focus + .c4 {
  box-shadow: 0px 0px 5px 0px rgba(33,107,235,.9);
}

.c8:checked + .c4 {
  border-color: #cc1439;
  background-color: #cc1439;
}

.c8:checked + .c4:before {
  display: block;
}

.c8:not(:checked) + .c4 {
  border-color: #cc1439;
  background-color: #ffffff;
}

.c10 {
  position: absolute;
  opacity: 0;
  height: 1px;
  width: 1px;
}

.c10:focus + .c4 {
  box-shadow: 0px 0px 5px 0px rgba(33,107,235,.9);
}

.c10:checked + .c4 {
  border-color: #e4e7eb;
  background-color: #e4e7eb;
}

.c10:checked + .c4:before {
  display: block;
}

.c10:not(:checked) + .c4 {
  border-color: #e4e7eb;
  background-color: #f0f2f5;
}

.c1 {
  padding: 4px 0;
}

.c1 .c6 {
  margin-left: 8px;
}

<div
  style={
    Object {
      "padding": "24px",
    }
  }
>
  <div
    className="c0"
  >
    <div
      className="c1"
    >
      <label
        className="c2"
        disabled={false}
      >
        <input
          aria-invalid={false}
          aria-required={false}
          checked={true}
          className="c3 c1"
          disabled={false}
          id="checkbox"
          readOnly={true}
          required={false}
          type="checkbox"
        />
        <div
          checked={true}
          className="c4 c5"
          data-testid="visual-checkbox"
          disabled={false}
        />
        <p
          className="c6 c7"
          color="currentColor"
          disabled={false}
          fontSize="medium"
        >
          I am an indeterminate checkbox
        </p>
      </label>
    </div>
    <div
      className="c1"
    >
      <label
        className="c2"
        disabled={false}
      >
        <input
          aria-invalid={false}
          aria-required={false}
          checked={false}
          className="c3 c1"
          disabled={false}
          id="checkbox"
          readOnly={true}
          required={false}
          type="checkbox"
        />
        <div
          checked={false}
          className="c4 c5"
          data-testid="visual-checkbox"
          disabled={false}
        />
        <p
          className="c6 c7"
          color="currentColor"
          disabled={false}
          fontSize="medium"
        >
          I am a unchecked indeterminate checkbox
        </p>
      </label>
    </div>
    <div
      className="c1"
    >
      <label
        className="c2"
        disabled={false}
      >
        <input
          aria-invalid={true}
          aria-required={false}
          checked={true}
          className="c8 c1"
          disabled={false}
          id="checkbox"
          readOnly={true}
          required={false}
          type="checkbox"
        />
        <div
          checked={true}
          className="c4 c5"
          data-testid="visual-checkbox"
          disabled={false}
        />
        <p
          className="c6 c7"
          color="currentColor"
          disabled={false}
          fontSize="medium"
        >
          I am an indeterminate checkbox with an error
        </p>
      </label>
    </div>
    <div
      className="c1"
    >
      <label
        className="c9"
        disabled={true}
      >
        <input
          aria-invalid={false}
          aria-required={false}
          checked={true}
          className="c10 c1"
          disabled={true}
          id="checkbox"
          readOnly={true}
          required={false}
          type="checkbox"
        />
        <div
          checked={true}
          className="c4 c5"
          data-testid="visual-checkbox"
          disabled={true}
        />
        <p
          className="c6 c11"
          color="currentColor"
          disabled={true}
          fontSize="medium"
        >
          I am a disabled indeterminate checkbox
        </p>
      </label>
    </div>
  </div>
</div>
`;
